<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityRecogerDatos">

    <TextView
        android:id="@+id/TVlabelCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelCorreo" />

    <TextView
        android:id="@+id/TVvalueCorreo"
        style="@style/estiloValues" />

    <TextView
        android:id="@+id/TVlabelTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelTelefono" />

    <TextView
        android:id="@+id/TVvalueTelefono"
        style="@style/estiloValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TVlabelSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelSexo" />

    <TextView
        android:id="@+id/TVvalueSexo"
        style="@style/estiloValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TVlabelNumHermanos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelNumHermanos" />

    <TextView
        android:id="@+id/TVvalueNumHermanos"
        style="@style/estiloValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TVlabelMascotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelMascotas" />

    <TextView
        android:id="@+id/TVvalueMascotas"
        style="@style/estiloValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/BTNvolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BTNvolver" />
</LinearLayout>